# Computer-Vision

./: .gitignore  Readme.md  TODO.md  pyproject.toml
data/geolocalisation/: coordinates.xlsx
data/geolocalisation/geometries/simplemaps_worldcities_basicv1.901/: worldcities.xlsx
data/segmentation/output/CAM01_20231211_13-21-52_clipped/: CAM01_20231211_13-21-52_clipped_results.txt
deep_learning_routines/examples/classification/: MultiClassification_CNN_GoogleDrive_Waterbodies_Angola.ipynb
deep_learning_routines/examples/segmentation/: Segmentation_HSVfilter_Local_PlasticCups.ipynb
examples/classical_routines/: Segmentation_HSVfilter_Local_PlasticCups.ipynb
examples/deep_learning_routines/: MultiClassification_CNN_GoogleDrive_Waterbodies_Angola.ipynb  Waterline_SAM2.ipynb
examples/image_geolocalisation/: image_geolocalisation_chatgpt.ipynb  image_geolocalisation_streetclip.ipynb
