[project]
name = "computer_vision"
version = "2025.12.18"
description = "A repository containing computer vision examples."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "imutils>=0.5.4",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.8",
    "mapclassify>=2.9.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "opencv-contrib-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "sam-2",
    "sam3>=0.1.2",
    "supervision>=0.25.1",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.53.1",
    "triton-windows>=3.5.1.post22",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2", branch = "main" }
